--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -2,5 +2,5 @@
 http-socket = :$(PORT)
 master = true
 die-on-term = true
-module = foragerFlask:app
+module = foragerFlask.wsgi:application
 memory-report = true
