switched uwsgi file back

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -2,5 +2,5 @@
 http-socket = :$(PORT)
 master = true
 die-on-term = true
-module = foragerFlask.wsgi:application
+module = foragerFlask:app
 memory-report = true
